ex3/testdata/typechecker/error/BinopTest-err7.java
class BinopTest {
	public static void main(String[] a){
            boolean b;
            b = 283 < false; // TE
	}
}

